pagina casi terminada, falta iframe, icons

--- a/CaC.html
+++ b/CaC.html
@@ -55,143 +55,189 @@
     </section>
 
     <!-- SECCION SERVICIOS -->
-  <section class="servicios" id="servicios">
+    <section class="servicios" id="servicios">
 
-    <article class="titulo">
-      <h2 class="titulo-section">Servicios</h2>
-      <p>Proporcionamos servicios integrales que abarcan desde la gestión de rutas hasta la entrega puntual.</p>
-    </article>
+        <article class="titulo">
+            <h2 class="titulo-section">Servicios</h2>
+            <p>Proporcionamos servicios integrales que abarcan desde la gestión de rutas hasta la entrega puntual.</p>
+        </article>
 
-    <div class="carousel">
-      <div class="cards">
+        <div class="carousel">
+            <div class="cards">
 
-        <div class="card">
-          <div class="image-card">
-            <img src="/static/img/camamarillo.jpg" class="card-img-top" alt="...">
-          </div>
+                <div class="card">
+                    <div class="image-card">
+                        <img src="/static/img/camamarillo.jpg" class="card-img-top" alt="...">
+                    </div>
 
-          <div class="card-body">
-            <h5 class="card-title">Cargas Generales</h5>
-            <p class="card-text">Todo tipo de bultos, objetos, mercaderias, etc. <br>Sin límites de dimensión.
-              <br>Posibilidad de entregas a domicilio.</p>
-          </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Cargas Generales</h5>
+                        <p class="card-text">Todo tipo de bultos, objetos, mercaderias, etc. <br>Sin límites de
+                            dimensión.
+                            <br>Posibilidad de entregas a domicilio.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="image-card">
+                        <img src="/static/img/refrigerada.jpg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Carga Refrigerada</h5>
+                        <p class="card-text">Productos que necesitan una temperatura fría para su conservación.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="image-card">
+                        <img src="/static/img/camBlancodos.jpg" class="card-img-top" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Carga líquida</h5>
+                        <p class="card-text">Garantiza la seguridad y la integridad de líquidos alimentarios, agua
+                            potable,
+                            productos farmacéuticos y otros líquidos.</p>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="carousel">
+                <div class="cards">
+
+                    <div class="card">
+                        <div class="image-card">
+                            <img src="/static/img/trasnpanimales.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Transporte de Animales</h5>
+                            <p class="card-text">Garantizando condiciones adecuadas de temperatura, ventilación y
+                                espacio durante el
+                                trayecto. </p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="image-card">
+                            <img src="/static/img/cargasPeligrosas.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Cargas peligrosas</h5>
+                            <p class="card-text">Prestación del servicio de transporte de hidrocarburos y cargas
+                                peligrosas en el
+                                territorio de la República
+                                Argentina.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="image-card">
+                            <img src="/static/img/deposito.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Deposito temporal</h5>
+                            <p class="card-text">Si aún no necesitas retirar tu mercadería, nosotros nos encargamos de
+                                su
+                                almacenamiento.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="carousel">
+                <div class="cards">
+
+                    <div class="card">
+                        <div class="image-card">
+                            <img src="/static/img/autoelevador.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Autoelevador</h5>
+                            <p class="card-text">Contamos con una flota de equipos eficientes y capacitados para la
+                                carga y descarga
+                                de mercancías con rapidez y precisión.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="image-card">
+                            <img src="/static/img/camaraRefri.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Cámaras refrígeras</h5>
+                            <p class="card-text">Protección de productos sensibles en cámaras frigoríficas</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="image-card">
+                            <img src="/static/img/contraReemb.webp" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Contrareembolso</h5>
+                            <p class="card-text">Este servicio resuelve los problemas de cobranza. Vos hacés el envío y
+                                el pago se
+                                gestiona a la hora de recibir la encomienda.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
 
-        <div class="card">
-          <div class="image-card">
-            <img src="/static/img/refrigerada.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Carga Refrigerada</h5>
-            <p class="card-text">Productos que necesitan una temperatura fría para su conservación.</p>
-          </div>
+
+
+    </section>
+    <!-- SECCION CONTACTO -->
+    <section class="contacto" id="contacto">
+        <div id="title-form">
+            <h1>Contactate con nosotros</h1>
+            <p>Ingresa tus datos, hace tu consulta y en breve te responderemos</p>
         </div>
+        <form action="" id="form-contacto" onsubmit="return validardatos()">
 
-        <div class="card">
-          <div class="image-card">
-            <img src="/static/img/camBlancodos.jpg" class="card-img-top" alt="...">
-          </div>
-          <div class="card-body">
-            <h5 class="card-title">Carga líquida</h5>
-            <p class="card-text">Garantiza la seguridad y la integridad de líquidos alimentarios, agua potable,
-              productos farmacéuticos y otros líquidos.</p>
-          </div>
-        </div>
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre" placeholder="Ej. Martín">
 
-      </div>
+            <br>
 
+            <label for="apellido">Apellido</label>
+            <input type="text" name="apellido" id="apellido" placeholder="Ej. Otero">
 
-      <div class="carousel">
-        <div class="cards">
+            <br>
 
-          <div class="card">
-            <div class="image-card">
-              <img src="/static/img/trasnpanimales.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Transporte de Animales</h5>
-              <p class="card-text">Garantizando condiciones adecuadas de temperatura, ventilación y espacio durante el
-                trayecto. </p>
-            </div>
-          </div>
+            <label for="telefono">Teléfono</label>
+            <input type="tel" name="telefono" id="telefono" placeholder="1176532244">
 
-          <div class="card">
-            <div class="image-card">
-              <img src="/static/img/cargasPeligrosas.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Cargas peligrosas</h5>
-              <p class="card-text">Prestación del servicio de transporte de hidrocarburos y cargas peligrosas en el
-                territorio de la República
-                Argentina.</p>
-            </div>
-          </div>
+            <br>
 
-          <div class="card">
-            <div class="image-card">
-              <img src="/static/img/deposito.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Deposito temporal</h5>
-              <p class="card-text">Si aún no necesitas retirar tu mercadería, nosotros nos encargamos de su
-                almacenamiento.</p>
-            </div>
-          </div>
+            <label for="mail">E-mail</label>
+            <input type="email" name="mail" id="mail" placeholder="example@gmail.com">
 
-        </div>
-      </div>
-      <div class="carousel">
-        <div class="cards">
+            <br>
 
-          <div class="card">
-            <div class="image-card">
-              <img src="/static/img/autoelevador.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Autoelevador</h5>
-              <p class="card-text">Contamos con una flota de equipos eficientes y capacitados para la carga y descarga
-                de mercancías con rapidez y precisión.</p>
-            </div>
-          </div>
+            <label for="comentario">Comentarios y Preguntas</label> <br>
+            <textarea name="comentario" id="comentario" cols="25" rows="8"></textarea>
 
-          <div class="card">
-            <div class="image-card">
-              <img src="/static/img/camaraRefri.jpg" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Cámaras refrígeras</h5>
-              <p class="card-text">Protección de productos sensibles en cámaras frigoríficas</p>
-            </div>
-          </div>
+            <br>
 
-          <div class="card">
-            <div class="image-card">
-              <img src="/static/img/contraReemb.webp" class="card-img-top" alt="...">
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Contrareembolso</h5>
-              <p class="card-text">Este servicio resuelve los problemas de cobranza. Vos hacés el envío y el pago se
-                gestiona a la hora de recibir la encomienda.</p>
-            </div>
-          </div>
+            <div id="error"></div>
 
-        </div>
-      </div>
+            <input type="submit" id="button"></input>
 
-    </div>
-
-
-
-  </section>
+        </form>
+    </section>
 
     <footer>
         <p>
             &copy; 2024 Catalina Transporte S.A.
         </p>
         <div class="social-icons">
-            <a href="#" target="_blank"><i id="fb"></i></a>
-            <a href="#" target="_blank"><i id="twt"></i></a>
-            <a href="#" target="_blank"><i id="ig"></i></a>
+            <a href="#" target="_blank"><i class="facebook"></i></a>
+            <a href="#" target="_blank"><i class="twitter"></i></a>
+            <a href="#" target="_blank"><i class="instagram"></i></a>
         </div>
         <p>&copy;Victor &copy;Catalina &copy;Santiago</p>
     </footer>
