--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@
             </div>
 
         </div>
-
+        <section class="botonContainer">
+            <button class="botonP" onclick="window.location.href='https://proyecto-final-cac.netlify.app/'">
+                Hacer pedido
+            </button>
+        </section>
         <section id="map-section">
             <div id="map-container">
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7811.137637814256!2d-58.36159461748099!3d-34.59963947022864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a334d9c2d70389%3A0xe7b5e9ee316678f!2sPuerto%20Madero%2C%20Cdad.%20Aut%C3%B3noma%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1714779870751!5m2!1ses-419!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
